After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 676442 - video: Fix printf format warnings on mingw-w64
video: Fix printf format warnings on mingw-w64
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Windows
: Normal minor
: 0.11.x
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-05-20 20:28 UTC by Raimo Järvi
Modified: 2012-05-24 08:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
video: Fix printf format warnings on mingw-w64 (1.69 KB, patch)
2012-05-20 20:31 UTC, Raimo Järvi
none Details | Review

Description Raimo Järvi 2012-05-20 20:28:49 UTC
gstvideodecoder.c:1774:3: error: format '%d' expects type 'int', but argument 9 has type 'gsize'
gstvideodecoder.c:1774:3: error: format '%d' expects type 'int', but argument 10 has type 'gsize'

gstvideoencoder.c:1118:3: error: format '%d' expects type 'int', but argument 8 has type 'gsize'
Comment 1 Raimo Järvi 2012-05-20 20:31:03 UTC
Created attachment 214517 [details] [review]
video: Fix printf format warnings on mingw-w64
Comment 2 Wim Taymans 2012-05-24 08:58:15 UTC
commit d42a197c045ad4c711cdddf8f8a2a796529c0551
Author: Raimo Järvi <raimo.jarvi@gmail.com>
Date:   Sun May 20 23:27:42 2012 +0300

    video: Fix printf format warnings on mingw-w64
    
    https://bugzilla.gnome.org/show_bug.cgi?id=676442