video: Fix printf format warnings on mingw-w64

https://bugzilla.gnome.org/show_bug.cgi?id=676442